# bimuma

./: README.md  pyproject.toml
.github/workflows/: python-package.yml
src/bimuma/: donor.py  summary.py
tests/: test_summary.py
